[package]
name = "youtube_chat"
description = "provides Rust interface of fetching youtube live chat comments"
license = "MIT"
authors = ["lemolatoon"]
repository = "https://github.com/lemolatoon/youtube_chat_rs"
version = "0.2.2"
readme = "README.md"
documentation = "https://docs.rs/youtube_chat"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]

[dependencies]
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
url = "2.3.1"
youtube_chat_macro = { version = "0.2.2" }
