[package]
name = "youtube_chat_macro"
description = "proc_macro s for `youtube_chat` crate"
license = "MIT"
authors = ["lemolatoon"]
repository = "https://github.com/lemolatoon/youtube_chat_rs"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"

[dev-dependencies]
insta = "1.28.0"
